# new-keet

./: .gitignore  app.json  main.bundle.js  main.js  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: assign.yml  build.yml  bump-deps.yml  download-locales.yml  lint-check.yml  pr-notice.yml  scheduled-build.yml  test.yml  upload-locales.yml
.storybook/: main.js  storybook.requires.js
__mocks__/: react-native-compressor.js  react-native-config.js
android/: settings.gradle
android/app/: build.gradle
app/: index.tsx
docs/: APPIUM-TEST.md  CUSTOMIZATION.md  DEBUG.md  GITHUB_ACTIONS.md  ICON.md  LOCAL-STORAGE.md  MODULES.md  ONBOARD.md  README.md  RIVE.md  STORES.md  TESTING.md  UPGRADE.md
ios/: Podfile
ios/Keet/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard  SplashScreen.storyboard
ios/Keet.xcodeproj/: project.pbxproj
ios/Keet.xcworkspace/: contents.xcworkspacedata
ios/KeetTests/: KeetTests.m
keet-expo-modules/: expo-module.config.json
keet-expo-modules/android/: build.gradle
keet-expo-modules/android/src/main/cpp/: CMakeLists.txt  KeetCore.cpp
keet-expo-modules/cpp/: jsi_macros.h
keet-expo-modules/ios/: KeetCore.h  KeetCore.mm  KeetCoreModule.swift  KeetExpoModules.podspec  KeetExpoPushModule.swift  KeetLogging.h  KeetLogging.m  KeetLogging.podspec  KeetLoggingExt.swift  KeetNotifications.podspec  KeetNotificationsCoreRunner.h  KeetNotificationsCoreRunner.mm  KeetUserDefaultsEnv.h  (+11 more)
lib/: inspector.js
patches/: expo-document-picker+13.0.1.patch  expo-image+2.0.2.patch  expo-media-library+17.0.3.patch  expo-video-thumbnails+9.0.2.patch  react-native+0.76.6.patch  react-native-linear-gradient+2.8.3.patch  react-native-notifier+2.0.0.patch  react-native-walkthrough-tooltip+1.6.0.patch
scripts/: bump_dependency_version.sh  bump_version.sh  create_release_tag.sh  ios_release.patch  ios_release.sh  link-keet-store.patch  link_local_keet_store.sh  parse_app_version.sh  set_version.sh  setup-sv.sh  setup.sh  version_increment.sh  with_sentry.patch
src/: App.tsx  store.ts
types/: b4a.d.ts  get-mime-type.d.ts  global.d.ts  holepunchto__emojis.d.ts  holepunchto__keet-link-preview.d.ts  holepunchto__keet-store.d.ts  hypertrace.d.ts  marked.d.ts  react-native-config.d.ts  tiny-buffer-rpc.d.ts
(+747 files in other folders)
